[mms] Load sent-mail mailbox list on demand in dynamic view.
[mms] Allow configurable access to remote accounts from within a session
      (Request #8077).
[jan] Display "Other Options" icon instead of "New Window" icon in collapsed
      preview headers.
[mms] More advanced auto-completion for smartmobile view.


------
v6.1.7
------

[mjr] Honor recurrence-id range values when deleting recurring events (Bug
      #12746).
[mms] Don't provide links to view attachments in compose screen unless the
      attachment can be displayed (Bug #12841).


------
v6.1.6
------

[mms] Fix regression where auto-saved drafts were not being deleted when
      cancelling compose message in dynamic view.
[mms] Fix regression in parsing permission values (Bug #12812).
[mms] Fix regression in showing non-available actions in dynamic mailbox view
      when ACL rules prevent them (Bug #12808).


------
v6.1.5
------

[mms] SECURITY: Fix XSS in message and search screens resulting from a
      user-defined flag label (João Machado <geral@jpaulo.eu>).
[mms] Support uploading multiple attachments at once in dynamic view.
[mms] Send linked attachment download notification message in language of the
      sending user (Bug #12783).
[mms] Fix populating search fields when editing an advanced search query.
[mms] Trigger auto save draft in dynamic view if attachments have changed.
[mms] Improved UI for dropping attachments on dynamic compose screen.
[mms] Fix manually loading all addresses in a header.
[mms] Fix regression where reloading dynamic view would not load the previously
      selected message.
[mms] Fixed regression in enforcing max_recipients and max_timelimit
      permissions (Bug #12674).
[mms] Correctly enforce file size attachment limits on the first attachment
      (Bug #12663).
[mms] Don't attempt to get quota information from non-IMAP mailboxes (Bug
      #12608).
[jan] Don't attach address book behavior if contacts API is unavailable.