@@ -3441,6 +3441,7 @@
    <date>2013-11-19</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix displaying user-defined message headers when multiple-headers exist in a single message.
 * [mjr] Honor recurrence-id range values when deleting recurring events (Bug #12746).
 * [mms] Don&apos;t provide links to view attachments in compose screen unless the attachment can be displayed (Bug #12841).
    </notes>
