@@ -38,6 +38,8 @@ v6.2.0-git
 v6.1.7
 ------
 
+[mms] Fix displaying user-defined message headers when multiple-headers exist
+      in a single message.
 [mjr] Honor recurrence-id range values when deleting recurring events (Bug
       #12746).
 [mms] Don't provide links to view attachments in compose screen unless the
